--- a/po/fr.po
+++ b/po/fr.po
@@ -9,233 +9,233 @@ msgstr ""
 "Project-Id-Version: eye-on-cursor 1.1.0\n"
 "Report-Msgid-Bugs-To: https://github.com/djinnalexio/eye-on-cursor/issues\n"
 "POT-Creation-Date: 2024-06-04 16:00+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2024-06-04 16:54+0100\n"
+"Last-Translator: djinnalexio\n"
+"Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.4.4\n"
 
 #: eye-on-cursor@djinnalexio.github.io/lib/eye.js:94
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:219
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:270
 msgid "Toggle Tracker"
-msgstr ""
+msgstr "Activer/Désactiver le Traqueur"
 
 #: eye-on-cursor@djinnalexio.github.io/lib/eye.js:99
 msgid "Settings"
-msgstr ""
+msgstr "Paramètres"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/credits.js:105
 msgctxt "Translator Credits: enter your (user)name and email/url"
 msgid "translator_credits"
-msgstr ""
+msgstr "djinnalexio https://github.com/djinnalexio/"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/credits.js:112
 msgid "Extension Page"
-msgstr ""
+msgstr "Page de l'extension"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/credits.js:116
 msgid "Forked from"
-msgstr ""
+msgstr "Dérivé de"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/credits.js:120
 msgid "Cinnamon Fork"
-msgstr ""
+msgstr "Dérivé Cinnamon"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:42
 msgid "Eye"
-msgstr ""
+msgstr "Œil"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:52
 msgid "Eye Placement"
-msgstr ""
+msgstr "Placement de l'œil"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
 msgid "Left"
-msgstr ""
+msgstr "Gauche"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
 msgid "Center"
-msgstr ""
+msgstr "Centre"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
 msgid "Right"
-msgstr ""
+msgstr "Droite"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:63
 msgid "Position"
-msgstr ""
+msgstr "Position"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:64
 msgid "Position of the eye on the panel"
-msgstr ""
+msgstr "Position de l'œil sur le panneau"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:76
 msgid "Index"
-msgstr ""
+msgstr "Ordre"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:77
 msgid "Index of the eye on the panel segment"
-msgstr ""
+msgstr "Ordre de l'œil sur le segment du panneau"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:93
 msgid "Count"
-msgstr ""
+msgstr "Nombre"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:94
 msgid "Number of eyes to be spawned"
-msgstr ""
+msgstr "Nombre d'yeux à créer"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:110
 msgid "Width"
-msgstr ""
+msgstr "Largeur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:111
 msgid "Drawing space and padding of the eye"
-msgstr ""
+msgstr "Espace de l'œil et de la marge"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:127
 msgid "Interactivity"
-msgstr ""
+msgstr "Interactivité"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:128
 msgid "Allow eyes to respond to clicks"
-msgstr ""
+msgstr "Permettre aux yeux de réagir aux clics"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:140
 msgid "Eye Drawing"
-msgstr ""
+msgstr "Dessin de l'œil"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
 msgid "Eyelid"
-msgstr ""
+msgstr "Paupière"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
 msgid "Comic"
-msgstr ""
+msgstr "Comic"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
 msgid "Round"
-msgstr ""
+msgstr "Rond"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:149
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:80
 msgid "Shape"
-msgstr ""
+msgstr "Forme"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:150
 msgid "Shape of the eye"
-msgstr ""
+msgstr "Forme de l'œil"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:162
 msgid "Outline Mode"
-msgstr ""
+msgstr "Mode Contour"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:163
 msgid "Draw the eye as outline only"
-msgstr ""
+msgstr "Dessiner l'œil uniquement en contour"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:177
 msgid "Strokes"
-msgstr ""
+msgstr "Traits"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:178
 msgid "Thickness of the strokes"
-msgstr ""
+msgstr "Épaisseur des traits"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:227
 msgid "Color"
-msgstr ""
+msgstr "Couleur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:228
 msgid "Custom iris color"
-msgstr ""
+msgstr "Couleur personnalisée de l'iris"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:258
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:197
 msgid "Refresh Rate"
-msgstr ""
+msgstr "Fréquence"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:259
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:198
 msgid "Hz"
-msgstr ""
+msgstr "Hz"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:279
 msgid "About"
-msgstr ""
+msgstr "À propos"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:280
 msgid "Development information and credits"
-msgstr ""
+msgstr "Informations de développement et crédits"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:42
 msgid "Mouse Tracker"
-msgstr ""
+msgstr "Traqueur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:50
 msgid "Tracker Drawing"
-msgstr ""
+msgstr "Dessin du traqueur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:81
 msgid "Shape of the tracker"
-msgstr ""
+msgstr "Forme du traqueur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:95
 msgid "Size"
-msgstr ""
+msgstr "Taille"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:96
 msgid "Size of the tracker"
-msgstr ""
+msgstr "Taille du traqueur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:144
 msgid "Default Color"
-msgstr ""
+msgstr "Couleur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:145
 msgid "Default color of the tracker"
-msgstr ""
+msgstr "Couleur par défaut du traqueur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:155
 msgid "Colors on Click"
-msgstr ""
+msgstr "Couleurs de clic"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:156
 msgid "Colors when left, middle, and right-clicking"
-msgstr ""
+msgstr "Couleurs de clics gauche, central, et droit"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:162
-msgid ""
-"Click highlighting does not work in applications on Wayland. See README."
-msgstr ""
+msgid "Click highlighting does not work in applications on Wayland. See README."
+msgstr "La mise en surbrillance des clics ne fonctionne pas dans les applications sur Wayland. Voir README."
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:166
 msgid "Middle-click highlighting does not work on x11. See README."
-msgstr ""
+msgstr "La mise en surbrillance du clic central ne fonctionne pas sur x11. Voir README."
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:180
 msgid "Opacity"
-msgstr ""
+msgstr "Opacité"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:181
 msgid "Opacity of the tracker"
-msgstr ""
+msgstr "Opacité du traqueur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:214
 msgid "Tracker keybinding"
-msgstr ""
+msgstr "Raccourci du traqueur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:220
 msgid "Set a shortcut"
-msgstr ""
+msgstr "Définir un raccourci"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:226
 msgid "New shortcut…"
-msgstr ""
+msgstr "Nouveau raccourci…"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:271
 msgid "Press Esc to cancel or Backspace to disable the shortcut"
-msgstr ""
+msgstr "Appuyez sur Échap pour annuler ou sur Retour arrière pour désactiver le raccourci"
