--- a/po/es.po
+++ b/po/es.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eye-on-cursor 1.2.1\n"
 "Report-Msgid-Bugs-To: https://github.com/djinnalexio/eye-on-cursor/issues\n"
-"POT-Creation-Date: 2024-08-02 03:20+0100\n"
-"PO-Revision-Date: 2024-08-01 23:50+0100\n"
+"POT-Creation-Date: 2024-08-26 20:18+0100\n"
+"PO-Revision-Date: 2024-08-26 21:53+0100\n"
 "Last-Translator: djinnalexio\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -18,91 +18,95 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 3.4.4\n"
 
-#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:109
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:223
+#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:117
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:227
 msgid "Toggle Tracker"
 msgstr "Activar/Desactivar Rastreador"
 
-#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:114
+#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:122
 msgid "Settings"
 msgstr "Configuración"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:78
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:79
 msgid "About"
 msgstr "Acerca de"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:79
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:80
 msgid "Development information and credits"
 msgstr "Información de desarrollo y créditos"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:111
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:112
 msgctxt "(USER)NAME EMAIL/URL"
 msgid "translator_credits"
 msgstr "djinnalexio https://github.com/djinnalexio/"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:117
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:118
 msgid "Extension Page"
 msgstr "Página de la extensión"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:120
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:121
 msgid "Forked from"
 msgstr "Derivado de"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:123
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:124
 msgid "Cinnamon Fork"
 msgstr "Derivado de Cinnamon"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:42
-msgid "Eye"
-msgstr "Ojo"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:43
+msgid "Eyes"
+msgstr "Ojos"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:52
-msgid "Eye Placement"
-msgstr "Colocación del Ojo"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:51
+msgid "Layout"
+msgstr "Disposición"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
 msgid "Left"
 msgstr "Izquierda"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
 msgid "Center"
 msgstr "Centro"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
 msgid "Right"
 msgstr "Derecha"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:63
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:62
 msgid "Position"
 msgstr "Posición"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:64
-msgid "Position of the eye on the panel"
-msgstr "Posición del ojo en el panel"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:63
+msgid "Position of the eyes on the panel"
+msgstr "Posición de los ojos en el panel"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:76
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:75
 msgid "Index"
 msgstr "Índice"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:77
-msgid "Index of the eye on the panel segment"
-msgstr "Índice del ojo en el segmento del panel"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:76
+msgid "Index of the eyes on the panel segment"
+msgstr "Índice de los ojos en el segmento del panel"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:93
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:92
 msgid "Count"
 msgstr "Cantidad"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:94
-msgid "Number of eyes to be spawned"
-msgstr "Cantidad de ojos que se generarán"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:93
+msgid "Number of eyes"
+msgstr "Número de ojos"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:104
+msgid "Displaying more eyes may reduce performance."
+msgstr "Mostrar más ojos puede reducir el rendimiento."
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:110
 msgid "Width"
 msgstr "Ancho"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:111
-msgid "Drawing space and padding of the eye"
-msgstr "Espacio de dibujo y relleno del ojo"
+msgid "Drawing space and padding"
+msgstr "Espacio de dibujo y relleno"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:127
 msgid "Menu"
@@ -113,119 +117,117 @@ msgid "Enable the eye submenu"
 msgstr "Habilitar el submenú del ojo"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:140
-msgid "Eye Drawing"
-msgstr "Dibujo del Ojo"
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:55
+msgid "Appearance"
+msgstr "Apariencia"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
-msgid "Eyelid"
-msgstr "Párpado"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
-msgid "Comic"
-msgstr "Cómico"
+msgid "Natural"
+msgstr "Natural"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
 msgid "Round"
 msgstr "Redondo"
 
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
+msgid "Comic"
+msgstr "Cómico"
+
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:149
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:82
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:85
 msgid "Shape"
 msgstr "Forma"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:150
-msgid "Shape of the eye"
-msgstr "Forma del ojo"
+msgid "Shape of the eyes"
+msgstr "Forma de los ojos"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:162
 msgid "Outline Mode"
 msgstr "Modo de Contorno"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:163
-msgid "Draw the eye as outline only"
-msgstr "Dibujar solo el contorno del ojo"
+msgid "Draw the eyes as outline only"
+msgstr "Dibujar solo el contorno de los ojos"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:177
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:174
 msgid "Strokes"
 msgstr "Trazos"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:178
-msgid "Thickness of the strokes"
-msgstr "Grosor de los trazos"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:175
+msgid "Thickness of the strokes in outline mode"
+msgstr "Grosor de los trazos en modo de contorno"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:227
-msgid "Color"
-msgstr "Color"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:223
+msgid "Iris Color"
+msgstr "Color del iris"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:228
-msgid "Custom iris color"
-msgstr "Color personalizado del iris"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:258
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:199
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:251
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:202
 msgid "Refresh Rate"
 msgstr "Frecuencia de actualización"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:259
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:200
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:252
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:203
 msgid "Hz"
 msgstr "Hz"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:44
-msgid "Mouse Tracker"
-msgstr "Rastreador de ratón"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:263
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:214
+msgid "Higher refresh rates may impact performance."
+msgstr "Frecuencias de actualización más altas pueden afectar el rendimiento."
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:52
-msgid "Tracker Drawing"
-msgstr "Dibujo del Rastreador"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:270
+msgid "Blinking"
+msgstr "Parpadeo"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:83
-msgid "Shape of the tracker"
-msgstr "Forma del rastreador"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:275
+msgid "Eyelid Color"
+msgstr "Color del párpado"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:97
-msgid "Size"
-msgstr "Tamaño"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
+msgid "Manual"
+msgstr "Manual"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:98
-msgid "Size of the tracker"
-msgstr "Tamaño del rastreador"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
+msgid "Synced"
+msgstr "Sincronizado"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:146
-msgid "Default Color"
-msgstr "Color predeterminado"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
+msgid "Unsynced"
+msgstr "Asincrónico"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:147
-msgid "Default color of the tracker"
-msgstr "Color predeterminado del rastreador"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:289
+msgid "Blink Mode"
+msgstr "Modo de parpadeo"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:157
-msgid "Colors on Click"
-msgstr "Colores al hacer clic"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:290
+msgid "Choose how eyes blink"
+msgstr "Elija cómo parpadean los ojos"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:158
-msgid "Colors when left, middle, and right-clicking"
-msgstr "Colores al hacer clic con el botón izquierdo, central y derecho"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:304
+msgid "Manual Blink"
+msgstr "Parpadeo manual"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:164
-msgid "Click highlighting does not work in applications on Wayland. See README."
-msgstr "El resaltado de clics no funciona en aplicaciones en Wayland. Ver README."
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:313
+msgid "Synced Blinking Interval"
+msgstr "Intervalo de parpadeo sincronizado"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:168
-msgid "Middle-click highlighting does not work on x11. See README."
-msgstr "El resaltado de clics medios no funciona en x11. Ver README."
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:314
+msgid "Seconds between synchronized blinks"
+msgstr "Segundos entre parpadeos sincronizados"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:182
-msgid "Opacity"
-msgstr "Opacidad"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:331
+msgid "Unsynced Blinking Interval"
+msgstr "Intervalo de parpadeo asincrónico"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:183
-msgid "Opacity of the tracker"
-msgstr "Opacidad del rastreador"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:332
+msgid "Range of seconds between random blinks"
+msgstr "Rango de segundos entre parpadeos aleatorios"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:216
-msgid "Tracker keybinding"
-msgstr "Tecla de acceso rápido para el rastreador"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:400
+msgid "to"
+msgstr "a"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/keybinding.js:46
 msgid "Set a shortcut"
@@ -238,3 +240,59 @@ msgstr "Nuevo atajo…"
 #: eye-on-cursor@djinnalexio.github.io/settings/keybinding.js:98
 msgid "Press Esc to cancel or Backspace to disable the shortcut"
 msgstr "Presiona Esc para cancelar o Retroceso para desactivar el atajo"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:46
+msgid "Mouse Tracker"
+msgstr "Rastreador de ratón"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:86
+msgid "Shape of the tracker"
+msgstr "Forma del rastreador"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:100
+msgid "Size"
+msgstr "Tamaño"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:101
+msgid "Size of the tracker"
+msgstr "Tamaño del rastreador"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:149
+msgid "Color"
+msgstr "Color"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:150
+msgid "Default color of the tracker"
+msgstr "Color predeterminado del rastreador"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:160
+msgid "Colors on Click"
+msgstr "Colores al hacer clic"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:161
+msgid "Colors when left, middle, and right-clicking"
+msgstr "Colores al hacer clic con el botón izquierdo, central y derecho"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:167
+msgid "Click highlighting does not work in applications on Wayland. See README."
+msgstr "El resaltado de clics no funciona en aplicaciones en Wayland. Ver README."
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:171
+msgid "Middle-click highlighting does not work on x11. See README."
+msgstr "El resaltado de clics medios no funciona en x11. Ver README."
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:185
+msgid "Opacity"
+msgstr "Opacidad"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:186
+msgid "Opacity of the tracker"
+msgstr "Opacidad del rastreador"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:220
+msgid "Keybinding"
+msgstr "Tecla"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:238
+msgid "Credits"
+msgstr "Créditos"
