--- a/po/fr.po
+++ b/po/fr.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: eye-on-cursor 1.2.1\n"
 "Report-Msgid-Bugs-To: https://github.com/djinnalexio/eye-on-cursor/"
 "issues\n"
-"POT-Creation-Date: 2024-08-02 03:20+0100\n"
-"PO-Revision-Date: 2024-08-01 22:38+0100\n"
+"POT-Creation-Date: 2024-08-26 20:18+0100\n"
+"PO-Revision-Date: 2024-08-26 21:53+0100\n"
 "Last-Translator: djinnalexio\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -19,91 +19,95 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 3.4.4\n"
 
-#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:109
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:223
+#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:117
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:227
 msgid "Toggle Tracker"
 msgstr "Activer/Désactiver le Traqueur"
 
-#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:114
+#: eye-on-cursor@djinnalexio.github.io/lib/eye.js:122
 msgid "Settings"
 msgstr "Paramètres"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:78
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:79
 msgid "About"
 msgstr "À propos"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:79
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:80
 msgid "Development information and credits"
 msgstr "Informations de développement et crédits"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:111
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:112
 msgctxt "(USER)NAME EMAIL/URL"
 msgid "translator_credits"
 msgstr "djinnalexio https://github.com/djinnalexio/"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:117
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:118
 msgid "Extension Page"
 msgstr "Page de l'extension"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:120
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:121
 msgid "Forked from"
 msgstr "Dérivé de"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/about.js:123
+#: eye-on-cursor@djinnalexio.github.io/settings/about.js:124
 msgid "Cinnamon Fork"
 msgstr "Branche Cinnamon"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:42
-msgid "Eye"
-msgstr "Œil"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:43
+msgid "Eyes"
+msgstr "Yeux"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:52
-msgid "Eye Placement"
-msgstr "Placement de l'œil"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:51
+msgid "Layout"
+msgstr "Disposition"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
 msgid "Left"
 msgstr "Gauche"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
 msgid "Center"
 msgstr "Centre"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:58
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:57
 msgid "Right"
 msgstr "Droite"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:63
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:62
 msgid "Position"
 msgstr "Position"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:64
-msgid "Position of the eye on the panel"
-msgstr "Position de l'œil sur le panneau"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:63
+msgid "Position of the eyes on the panel"
+msgstr "Position des yeux sur le panneau"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:76
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:75
 msgid "Index"
 msgstr "Ordre"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:77
-msgid "Index of the eye on the panel segment"
-msgstr "Ordre de l'œil sur le segment du panneau"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:76
+msgid "Index of the eyes on the panel segment"
+msgstr "Rang des yeux sur le segment du panneau"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:93
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:92
 msgid "Count"
 msgstr "Quantité"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:94
-msgid "Number of eyes to be spawned"
-msgstr "Nombre d'yeux à créer"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:93
+msgid "Number of eyes"
+msgstr "Nombre d'yeux"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:104
+msgid "Displaying more eyes may reduce performance."
+msgstr "Un plus grand nombre d'yeux peut réduire la performance."
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:110
 msgid "Width"
 msgstr "Largeur"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:111
-msgid "Drawing space and padding of the eye"
-msgstr "Espace de l'œil et de la marge"
+msgid "Drawing space and padding"
+msgstr "Espace et marge"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:127
 msgid "Menu"
@@ -114,124 +118,117 @@ msgid "Enable the eye submenu"
 msgstr "Activer le sous-menu de l'œil"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:140
-msgid "Eye Drawing"
-msgstr "Dessin de l'œil"
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:55
+msgid "Appearance"
+msgstr "Apparence"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
-msgid "Eyelid"
-msgstr "Paupière"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
-msgid "Comic"
-msgstr "Comic"
+msgid "Natural"
+msgstr "Naturel"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
 msgid "Round"
 msgstr "Rond"
 
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:146
+msgid "Comic"
+msgstr "Comic"
+
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:149
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:82
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:85
 msgid "Shape"
 msgstr "Forme"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:150
-msgid "Shape of the eye"
-msgstr "Forme de l'œil"
+msgid "Shape of the eyes"
+msgstr "Forme des yeux"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:162
 msgid "Outline Mode"
 msgstr "Mode Contour"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:163
-msgid "Draw the eye as outline only"
-msgstr "Dessiner l'œil uniquement en contour"
+msgid "Draw the eyes as outline only"
+msgstr "Dessiner les yeux en contour"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:177
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:174
 msgid "Strokes"
 msgstr "Traits"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:178
-msgid "Thickness of the strokes"
-msgstr "Épaisseur des traits"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:175
+msgid "Thickness of the strokes in outline mode"
+msgstr "Épaisseur des traits en mode contour"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:227
-msgid "Color"
-msgstr "Couleur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:223
+msgid "Iris Color"
+msgstr "Couleur de l'iris"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:228
-msgid "Custom iris color"
-msgstr "Couleur personnalisée de l'iris"
-
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:258
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:199
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:251
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:202
 msgid "Refresh Rate"
 msgstr "Fréquence"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:259
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:200
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:252
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:203
 msgid "Hz"
 msgstr "Hz"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:44
-msgid "Mouse Tracker"
-msgstr "Traqueur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:263
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:214
+msgid "Higher refresh rates may impact performance."
+msgstr "Une fréquence élevée peut réduire la performance."
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:52
-msgid "Tracker Drawing"
-msgstr "Dessin du traqueur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:270
+msgid "Blinking"
+msgstr "Clignement"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:83
-msgid "Shape of the tracker"
-msgstr "Forme du traqueur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:275
+msgid "Eyelid Color"
+msgstr "Couleur de la paupière"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:97
-msgid "Size"
-msgstr "Taille"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
+msgid "Manual"
+msgstr "Manuel"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:98
-msgid "Size of the tracker"
-msgstr "Taille du traqueur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
+msgid "Synced"
+msgstr "Synchronisé"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:146
-msgid "Default Color"
-msgstr "Couleur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:286
+msgid "Unsynced"
+msgstr "Aléatoire"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:147
-msgid "Default color of the tracker"
-msgstr "Couleur par défaut du traqueur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:289
+msgid "Blink Mode"
+msgstr "Mode de clignement"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:157
-msgid "Colors on Click"
-msgstr "Couleurs de clic"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:290
+msgid "Choose how eyes blink"
+msgstr "Comment les yeux clignent"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:158
-msgid "Colors when left, middle, and right-clicking"
-msgstr "Couleurs de clics gauche, central, et droit"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:304
+msgid "Manual Blink"
+msgstr "Clignement manuel"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:164
-msgid ""
-"Click highlighting does not work in applications on Wayland. See README."
-msgstr ""
-"La mise en surbrillance des clics ne fonctionne pas dans les applications "
-"sur Wayland. Voir README."
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:313
+msgid "Synced Blinking Interval"
+msgstr "Intervalle de clignement synchronisé"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:168
-msgid "Middle-click highlighting does not work on x11. See README."
-msgstr ""
-"La mise en surbrillance du clic central ne fonctionne pas sur x11. Voir "
-"README."
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:314
+msgid "Seconds between synchronized blinks"
+msgstr "Secondes entre les clignements synchronisés"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:182
-msgid "Opacity"
-msgstr "Opacité"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:331
+msgid "Unsynced Blinking Interval"
+msgstr "Intervalle de clignement aléatoire"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:183
-msgid "Opacity of the tracker"
-msgstr "Opacité du traqueur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:332
+msgid "Range of seconds between random blinks"
+msgstr "Intervalle de secondes entre les clignements aléatoires"
 
-#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:216
-msgid "Tracker keybinding"
-msgstr "Raccourci du traqueur"
+#: eye-on-cursor@djinnalexio.github.io/settings/eyeSettings.js:400
+msgid "to"
+msgstr "à"
 
 #: eye-on-cursor@djinnalexio.github.io/settings/keybinding.js:46
 msgid "Set a shortcut"
@@ -246,3 +243,64 @@ msgid "Press Esc to cancel or Backspace to disable the shortcut"
 msgstr ""
 "Appuyez sur Échap pour annuler ou sur Retour arrière pour désactiver le "
 "raccourci"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:46
+msgid "Mouse Tracker"
+msgstr "Traqueur"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:86
+msgid "Shape of the tracker"
+msgstr "Forme du traqueur"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:100
+msgid "Size"
+msgstr "Taille"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:101
+msgid "Size of the tracker"
+msgstr "Taille du traqueur"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:149
+msgid "Color"
+msgstr "Couleur"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:150
+msgid "Default color of the tracker"
+msgstr "Couleur par défaut du traqueur"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:160
+msgid "Colors on Click"
+msgstr "Couleurs de clic"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:161
+msgid "Colors when left, middle, and right-clicking"
+msgstr "Couleurs de clics gauche, central, et droit"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:167
+msgid ""
+"Click highlighting does not work in applications on Wayland. See README."
+msgstr ""
+"La mise en surbrillance des clics ne fonctionne pas dans les applications "
+"sur Wayland. Voir README."
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:171
+msgid "Middle-click highlighting does not work on x11. See README."
+msgstr ""
+"La mise en surbrillance du clic central ne fonctionne pas sur x11. Voir "
+"README."
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:185
+msgid "Opacity"
+msgstr "Opacité"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:186
+msgid "Opacity of the tracker"
+msgstr "Opacité du traqueur"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:220
+msgid "Keybinding"
+msgstr "Raccourci"
+
+#: eye-on-cursor@djinnalexio.github.io/settings/trackerSettings.js:238
+msgid "Credits"
+msgstr "Crédits"
