--- a/po/fr.po
+++ b/po/fr.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: eye-on-cursor 2.0.0\n"
 "Report-Msgid-Bugs-To: https://github.com/djinnalexio/eye-on-cursor/issues\n"
 "POT-Creation-Date: 2025-10-21 02:22+0100\n"
-"PO-Revision-Date: 2025-10-21 02:36+0100\n"
-"Last-Translator: djinnalexio\n"
+"PO-Revision-Date: 2025-10-23 09:47+0100\n"
+"Last-Translator: djinnalexio <pakueamb@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
